popravljen bug sa event listener-om